make nav and dragger fixed and seperate scrollbar to content only

--- a/Casterr/Styles/_Dragger.scss
+++ b/Casterr/Styles/_Dragger.scss
@@ -1,7 +1,6 @@
 ﻿/// <reference path="_Vars.scss" />
 
 .dragger {
-    width: 100%;
     height: 18px;
     overflow: hidden;
     -webkit-app-region: drag;
