--- a/Casterr/Styles/_Nav.scss
+++ b/Casterr/Styles/_Nav.scss
@@ -2,7 +2,7 @@
 
 nav {
     display: flex;
-    align-content: center;
+    align-items: center;
     justify-content: center;
     min-height: 48px;
     background-color: $secondaryColor;
