--- a/Casterr/Styles/_Norm.scss
+++ b/Casterr/Styles/_Norm.scss
@@ -23,9 +23,22 @@ body {
     background-color: $primaryColor;
     font-family: sans-serif; // Alef
     user-select: none;
+    overflow: hidden;
 }
 
 a{
     color: $textPrimary;
     text-decoration: none;
+}
+
+section#top {
+    position: fixed;
+    width: 100%;
+    z-index: 9999999;
+}
+
+section#main {
+    height: 100vh;
+    overflow-y: scroll;
+    padding: 66px 0 0 0;
 }
