--- a/Casterr/Styles/_Settings.scss
+++ b/Casterr/Styles/_Settings.scss
@@ -52,4 +52,10 @@
             }
         }
     }
+
+    .settingsContent {
+        width: 100%;
+        height: 100vh;
+        overflow-y: auto;
+    }
 }
